[package]
name = "factorio_factory_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageproc = "0.23.0"
image = { version = "0.24.1", default-features = false, features = ["png", "jpeg"] }
rusttype = "0.9.1"
uuid = { version = "0.8.2", features = ["v4"] }